varios cambios, agrega proyectos y footer

--- a/NvoPortFolio/src/app/componentes/estudios/estudios.component.html
+++ b/NvoPortFolio/src/app/componentes/estudios/estudios.component.html
@@ -4,31 +4,25 @@
     <div class="col col-lg-11">
         
           <ul>
-            <li>
-                <h2>Estudios #4</h2> - <h3>Año</h3>
-            </li>
+            <li><h4>Estudios #4</h4><h5>Año</h5></li>
             <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia tempore facere cum neque possimus, provident unde quasi hic aliquid officiis tempora facilis a vel atque sapiente, officia dolore earum explicabo?
             </p>
           </ul>
           <ul>
-            <li>
-                <h2>Estudios #3</h2> - <h3>Año</h3>
-            </li>
+            <li><h4>Estudios #3</h4><h5> Año</h5></li>
             <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia tempore facere cum neque possimus, provident unde quasi hic aliquid officiis tempora facilis a vel atque sapiente, officia dolore earum explicabo?
             </p>
           </ul>
           <ul>
-            <li><h2>Estudios #2</h2> - <h3>Año</h3></li>
+          <li><h4>Estudios #2</h4><h5> Año</h5></li>
             <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia tempore facere cum neque possimus, provident unde quasi hic aliquid officiis tempora facilis a vel atque sapiente, officia dolore earum explicabo?
             </p>
           </ul>
           <ul>
-            <li><h2>Estudios #1</h2> - <h3>Año</h3></li>
+          <li><h4>Estudios #1</h4><h5> Año</h5></li>
             <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia tempore facere cum neque possimus, provident unde quasi hic aliquid officiis tempora facilis a vel atque sapiente, officia dolore earum explicabo?
             </p>
           </ul>
-
-
     </div>
 </div>
 
