--- a/NvoPortFolio/src/app/componentes/experiencia/experiencia.component.html
+++ b/NvoPortFolio/src/app/componentes/experiencia/experiencia.component.html
@@ -1,30 +1,24 @@
-<p>experiencia works!</p>
 <div class="row">
     <h1>Experiencia Laboral</h1>
     <div class="col col-lg-1"></div>
-    <div class="col col-lg-11">
-        
+    <div class="col col-lg-11">        
           <ul>
-            <li>
-                <h2>Trabajo #4</h2> - <h3>Año</h3>
-            </li>
+            <li><h4>Trabajo #4</h4><h5>Año</h5></li>
             <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia tempore facere cum neque possimus, provident unde quasi hic aliquid officiis tempora facilis a vel atque sapiente, officia dolore earum explicabo?
             </p>
           </ul>
           <ul>
-            <li>
-                <h2>Trabajo #3</h2> - <h3>Año</h3>
-            </li>
+            <li><h4>Trabajo #3</h4><h5>Año</h5></li>
             <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia tempore facere cum neque possimus, provident unde quasi hic aliquid officiis tempora facilis a vel atque sapiente, officia dolore earum explicabo?
             </p>
           </ul>
           <ul>
-            <li><h2>Trabajo #2</h2> - <h3>Año</h3></li>
+          <li><h4>Trabajo #2</h4><h5>Año</h5></li>
             <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia tempore facere cum neque possimus, provident unde quasi hic aliquid officiis tempora facilis a vel atque sapiente, officia dolore earum explicabo?
             </p>
           </ul>
           <ul>
-            <li><h2>Trabajo #1</h2> - <h3>Año</h3></li>
+            <li><h4>Trabajo #1</h4><h5>Año</h5></li>
             <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia tempore facere cum neque possimus, provident unde quasi hic aliquid officiis tempora facilis a vel atque sapiente, officia dolore earum explicabo?
             </p>
           </ul>
@@ -32,3 +26,4 @@
 
     </div>
 </div>
+
