--- a/NvoPortFolio/src/app/componentes/habilidades/habilidades.component.html
+++ b/NvoPortFolio/src/app/componentes/habilidades/habilidades.component.html
@@ -2,11 +2,12 @@
     <h1>Hard & Soft skills</h1>
     <div class="text-center col col sm-12 col-md-3 col-lg-3 col-xl-3">
         <circle-progress
-        [percent]="85"
-        [radius]="100"
-        [outerStrokeWidth]="16"
+        [percent]="90"
+        [radius]="60"
+        [backgroundPadding]="5"
+        [outerStrokeWidth]="12"
         [innerStrokeWidth]="8"
-        [outerStrokeColor]="'#0B5345'"
+        [outerStrokeColor]="'#BA68C8 '"
         [innerStrokeColor]="'#1A5276'"
         [animation]="true"
         [animationDuration]="600"
@@ -14,21 +15,22 @@
         [titleColor]="'#E0E0E0'"
         [showUnits]="false"
         [lazy]="true"
-        [imageSrc]="'../assets/imgs/loghtml.png'"
+        [imageSrc]="'../assets/Imags/loghtml.png'"
         [showImage]="true"
-        [imageWidth]="100"
-        [imageHeight]="100"
+        [imageWidth]="75"
+        [imageHeight]="75"
         
   
 ></circle-progress>
     </div>
     <div class="text-center col col sm-12 col-md-3 col-lg-3 col-xl-3">
         <circle-progress
-        [percent]="85"
-        [radius]="100"
-        [outerStrokeWidth]="16"
+        [percent]="95"
+        [radius]="60"
+        [backgroundPadding]="5"
+        [outerStrokeWidth]="12"
         [innerStrokeWidth]="8"
-        [outerStrokeColor]="'#0B5345'"
+        [outerStrokeColor]="'#BA68C8 '"
         [innerStrokeColor]="'#1A5276'"
         [animation]="true"
         [animationDuration]="600"
@@ -36,19 +38,20 @@
         [titleColor]="'#E0E0E0'"
         [showUnits]="false"
         [lazy]="true"
-        [imageSrc]="'../assets/imgs/logcss.png'"
+        [imageSrc]="'../assets/Imags/logcss.png'"
         [showImage]="true"
-        [imageWidth]="100"
-        [imageHeight]="100"
+        [imageWidth]="75"
+        [imageHeight]="75"
     ></circle-progress>  
     </div>
     <div class="text-center col col sm-12 col-md-3 col-lg-3 col-xl-3">
         <circle-progress
-        [percent]="85"
-        [radius]="100"
-        [outerStrokeWidth]="16"
+        [percent]="75"
+        [radius]="60"
+        [backgroundPadding]="5"
+        [outerStrokeWidth]="12"
         [innerStrokeWidth]="8"
-        [outerStrokeColor]="'#0B5345'"
+        [outerStrokeColor]="'#BA68C8 '"
         [innerStrokeColor]="'#1A5276'"
         [animation]="true"
         [animationDuration]="600"
@@ -56,19 +59,20 @@
         [titleColor]="'#E0E0E0'"
         [showUnits]="false"
         [lazy]="true"
-        [imageSrc]="'../assets/imgs/JS.png'"
+        [imageSrc]="'../assets/Imags/JS.png'"
         [showImage]="true"
-        [imageWidth]="100"
-        [imageHeight]="100"
+        [imageWidth]="75"
+        [imageHeight]="75"
 ></circle-progress>
     </div>
     <div class="text-center col col sm-12 col-md-3 col-lg-3 col-xl-3">
         <circle-progress
         [percent]="85"
-        [radius]="100"
-        [outerStrokeWidth]="16"
+        [radius]="60"
+        [backgroundPadding]="5"
+        [outerStrokeWidth]="12"
         [innerStrokeWidth]="8"
-        [outerStrokeColor]="'#0B5345'"
+        [outerStrokeColor]="'#BA68C8 '"
         [innerStrokeColor]="'#1A5276'"
         [animation]="true"
         [animationDuration]="600"
@@ -76,20 +80,21 @@
         [titleColor]="'#E0E0E0'"
         [showUnits]="false"
         [lazy]="true"
-        [imageSrc]="'../assets/imgs/angular.png'"
+        [imageSrc]="'../assets/Imags/angular.png'"
         [showImage]="true"
-        [imageWidth]="100"
-        [imageHeight]="100"
+        [imageWidth]="75"
+        [imageHeight]="75"
 ></circle-progress>
     </div>
     
     <div class="text-center col col sm-12 col-md-3 col-lg-3 col-xl-3">
         <circle-progress
-        [percent]="85"
-        [radius]="100"
-        [outerStrokeWidth]="16"
+        [percent]="95"
+        [radius]="60"
+        [backgroundPadding]="5"
+        [outerStrokeWidth]="12"
         [innerStrokeWidth]="8"
-        [outerStrokeColor]="'#0B5345'"
+        [outerStrokeColor]="'#BA68C8 '"
         [innerStrokeColor]="'#1A5276'"
         [animation]="true"
         [animationDuration]="600"
@@ -97,21 +102,22 @@
         [titleColor]="'#E0E0E0'"
         [showUnits]="false"
         [lazy]="true"
-        [imageSrc]="'../assets/imgs/loghtml.png'"
+        [imageSrc]="'../assets/Imags/github.png'"
         [showImage]="true"
-        [imageWidth]="100"
-        [imageHeight]="100"
+        [imageWidth]="75"
+        [imageHeight]="75"
         
   
 ></circle-progress>
     </div>
     <div class="text-center col col sm-12 col-md-3 col-lg-3 col-xl-3">
         <circle-progress
-        [percent]="85"
-        [radius]="100"
-        [outerStrokeWidth]="16"
+        [percent]="90"
+        [radius]="60"
+        [backgroundPadding]="5"
+        [outerStrokeWidth]="12"
         [innerStrokeWidth]="8"
-        [outerStrokeColor]="'#0B5345'"
+        [outerStrokeColor]="'#BA68C8 '"
         [innerStrokeColor]="'#1A5276'"
         [animation]="true"
         [animationDuration]="600"
@@ -119,19 +125,20 @@
         [titleColor]="'#E0E0E0'"
         [showUnits]="false"
         [lazy]="true"
-        [imageSrc]="'../assets/imgs/logcss.png'"
+        [imageSrc]="'../assets/Imags/mysql.png'"
         [showImage]="true"
-        [imageWidth]="100"
-        [imageHeight]="100"
+        [imageWidth]="75"
+        [imageHeight]="75"
     ></circle-progress>  
     </div>
     <div class="text-center col col sm-12 col-md-3 col-lg-3 col-xl-3">
         <circle-progress
         [percent]="85"
-        [radius]="100"
-        [outerStrokeWidth]="16"
+        [radius]="60"
+        [backgroundPadding]="5"
+        [outerStrokeWidth]="12"
         [innerStrokeWidth]="8"
-        [outerStrokeColor]="'#0B5345'"
+        [outerStrokeColor]="'#BA68C8 '"
         [innerStrokeColor]="'#1A5276'"
         [animation]="true"
         [animationDuration]="600"
@@ -139,30 +146,116 @@
         [titleColor]="'#E0E0E0'"
         [showUnits]="false"
         [lazy]="true"
-        [imageSrc]="'../assets/imgs/JS.png'"
+        [imageSrc]="'../assets/Imags/nodejs.png'"
         [showImage]="true"
-        [imageWidth]="100"
-        [imageHeight]="100"
+        [imageWidth]="75"
+        [imageHeight]="75"
         ></circle-progress>
     </div>
     <div class="text-center col col sm-12 col-md-3 col-lg-3 col-xl-3">
         <circle-progress
-            [percent]="85"
-            [radius]="100"
-            [outerStrokeWidth]="16"
-            [innerStrokeWidth]="8"
-            [outerStrokeColor]="'#0B5345'"
-            [innerStrokeColor]="'#1A5276'"
-            [animation]="true"
-            [animationDuration]="600"
-            [showSubtitle]="false"
-            [titleColor]="'#E0E0E0'"
-            [showUnits]="false"
-            [lazy]="true"
-            [imageSrc]="'../assets/imgs/angular.png'"
-            [showImage]="true"
-            [imageWidth]="100"
-            [imageHeight]="100"
+        [percent]="70"
+        [radius]="60"
+        [backgroundPadding]="5"
+        [outerStrokeWidth]="12"
+        [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#BA68C8 '"
+        [innerStrokeColor]="'#1A5276'"
+        [animation]="true"
+        [animationDuration]="600"
+        [showSubtitle]="false"
+        [titleColor]="'#E0E0E0'"
+        [showUnits]="false"
+        [lazy]="true"
+        [imageSrc]="'../assets/Imags/english.png'"
+        [showImage]="true"
+        [imageWidth]="75"
+        [imageHeight]="75"
         ></circle-progress>
     </div>
+
+<div class="text-center col col sm-12 col-md-3 col-lg-3 col-xl-3">
+    <circle-progress
+    [percent]="85"
+    [radius]="60"
+    [backgroundPadding]="5"
+    [outerStrokeWidth]="12"
+    [innerStrokeWidth]="8"
+    [outerStrokeColor]="'#BA68C8 '"
+    [innerStrokeColor]="'#1A5276'"
+    [animation]="true"
+    [animationDuration]="600"
+    [showSubtitle]="false"
+    [titleColor]="'#E0E0E0'"
+    [showUnits]="false"
+    [lazy]="true"
+    [imageSrc]="'../assets/Imags/mongodb.png'"
+    [showImage]="true"
+    [imageWidth]="75"
+    [imageHeight]="75"
+></circle-progress>  
+</div>
+<div class="text-center col col sm-12 col-md-3 col-lg-3 col-xl-3">
+    <circle-progress
+    [percent]="85"
+    [radius]="60"
+    [backgroundPadding]="5"
+    [outerStrokeWidth]="12"
+    [innerStrokeWidth]="8"
+    [outerStrokeColor]="'#BA68C8 '"
+    [innerStrokeColor]="'#1A5276'"
+    [animation]="true"
+    [animationDuration]="600"
+    [showSubtitle]="false"
+    [titleColor]="'#E0E0E0'"
+    [showUnits]="false"
+    [lazy]="true"
+    [imageSrc]="'../assets/Imags/php.png'"
+    [showImage]="true"
+    [imageWidth]="75"
+    [imageHeight]="75"
+    ></circle-progress>
+</div>
+<div class="text-center col col sm-12 col-md-3 col-lg-3 col-xl-3">
+    <circle-progress
+    [percent]="85"
+    [radius]="60"
+    [backgroundPadding]="5"
+    [outerStrokeWidth]="12"
+    [innerStrokeWidth]="8"
+    [outerStrokeColor]="'#BA68C8 '"
+    [innerStrokeColor]="'#1A5276'"
+    [animation]="true"
+    [animationDuration]="600"
+    [showSubtitle]="false"
+    [titleColor]="'#E0E0E0'"
+    [showUnits]="false"
+    [lazy]="true"
+    [imageSrc]="'../assets/Imags/react.png'"
+    [showImage]="true"
+    [imageWidth]="75"
+    [imageHeight]="75"
+    ></circle-progress>
+</div>
+<div class="text-center col col sm-12 col-md-3 col-lg-3 col-xl-3">
+    <circle-progress
+    [percent]="85"
+    [radius]="60"
+    [backgroundPadding]="5"
+    [outerStrokeWidth]="12"
+    [innerStrokeWidth]="8"
+    [outerStrokeColor]="'#BA68C8 '"
+    [innerStrokeColor]="'#1A5276'"
+    [animation]="true"
+    [animationDuration]="600"
+    [showSubtitle]="false"
+    [titleColor]="'#E0E0E0'"
+    [showUnits]="false"
+    [lazy]="true"
+    [imageSrc]="'../assets/Imags/python.png'"
+    [showImage]="true"
+    [imageWidth]="75"
+    [imageHeight]="75"
+    ></circle-progress>
+</div>
 </div>
