--- a/NvoPortFolio/src/app/app.component.html
+++ b/NvoPortFolio/src/app/app.component.html
@@ -1,5 +1,12 @@
 <div>
   <app-header></app-header>
+  <app-infopersonal></app-infopersonal>
+  <app-experiencia></app-experiencia>
+  <app-estudios></app-estudios>
+  <app-habilidades></app-habilidades>
+  <app-proyectos></app-proyectos>
+  <app-footer></app-footer>
+  
 </div>
 
 
