--- a/NvoPortFolio/src/app/componentes/estudios/estudios.component.css
+++ b/NvoPortFolio/src/app/componentes/estudios/estudios.component.css
@@ -1,6 +1,6 @@
 .row{
     background-color: #ebe3e3;
-    margin:20px;
+    padding:20px;
     margin-top:10px;
     margin-bottom: 20px;
     margin-left: 40px;
