--- a/NvoPortFolio/src/app/componentes/infopersonal/infopersonal.component.html
+++ b/NvoPortFolio/src/app/componentes/infopersonal/infopersonal.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col col-xs-12 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
-            <img src="../../../assets/imgs/yo.jpeg"  class=img-fluid id="foto">
+            <img src="../../../assets/Imags/yo.jpeg"  class=img-fluid id="foto">
             <div id="datos">
               <h3 id="nombre">Maia Cristina Beatriz</h3>
               <h4 id="pfo1">Full Stack Developer Jr</h4>
